//
//  ProfileViewConstants.swift
//  ImageFeed
//
//  Created by Тимур Мурадов on 28.09.2023.
//

import Foundation

struct ProfileViewConstants {
    static let profilePlaceholder = "placeholder"
    static let profileImage = "Photo"
    static let profilelabelName = "Екатерина Новикова"
    static let profileNickName = "@ekaterina_nov"
    static let profileDiscription = "Hello World"
    static let profileEscButton = "ipad.and.arrow.forward"
    static let profileDidTapButtonTitle = "Пока-пока!"
    static let profiledidTapButtonMessage = "Уверены, что хотите выйти?"
    static let byeByeAlertTitleYesAction = "Да"
    static let byeByeAlertTitleNoAction = "Нет"
}
