...
        view.addSubview(discription)
        discription.translatesAutoresizingMaskIntoConstraints = false
        return discription
        
    }()
    
    private lazy var escButton: UIButton = {
        
        let button = UIButton.systemButton(
            with: UIImage(systemName: ProfileViewConstants.profileEscButton)!,
            target: self,
            action: #selector(Self.didTapButton)
        )
...
